crates/lang/macro/tests/ui/contract/fail/constructor-const.stderr
error: ink! constructors must not be const
  --> $DIR/constructor-const.rs:10:13
   |
10 |         pub const fn constructor() -> Self {
   |             ^^^^^
